--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -3,6 +3,9 @@
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/teachers.css') }}">
 
+<!-- 🔥**Add Flash Message Here** -->
+<div id="flashMessage" class="flash-message hidden"></div>
+
 <div class="admin-dashboard fade-in">
 
   <!-- HEADER -->
@@ -125,9 +128,11 @@
   <div id="teacherDynamicContent" class="fade-in"></div>
 
 </div>
-
-<script src="{{ url_for('static', filename='js/teacher.js') }}"></script>
+<!-- External JS only -->
+<!-- <script src="{{ url_for('static', filename='js/teacher.js') }}"></script> -->
 <script src="{{ url_for('static', filename='js/teacher_pageroutes.js') }}"></script>
 <script src="{{ url_for('static', filename='js/uploads.js') }}"></script>
+<script src="{{ url_for('static', filename='js/convert.js') }}"></script>
+<script src="{{ url_for('static', filename='js/push.js') }}"></script>
 
 {% endblock %}
