New exam UI & updated the exam page timer

--- a/templates/exam.html
+++ b/templates/exam.html
@@ -128,7 +128,7 @@
 
         <div class="instruction-card">
           <i class="fas fa-book-open instr-icon"></i>
-          <p>This exam contains<b> 50 multiple-choice questions</b>.</p>
+          <p>This exam contains<b> MCQ multiple-choice questions</b>.</p>
         </div>
 
         <div class="instruction-card danger">
